MD Settings: add error handling for spell-check add-word page

TBR=groby

Bug: 726279
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: If98b70dd2aa8ab652a515092b52264365364941f
Reviewed-on: https://chromium-review.googlesource.com/848305
Commit-Queue: Scott Chen <scottchen@chromium.org>
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529029}
Former-commit-id: f82d5908b057ffd5749c91428855465294dab91f