components/spellcheck/common/spellcheck_common.h
@@ -24,7 +24,8 @@ static const int kMaxSuggestions = 5;
 static const size_t MAX_SYNCABLE_DICTIONARY_WORDS = 1300;
 
 // Maximum number of bytes in a word that can be added to the custom spellcheck
-// dictionary.
+// dictionary. When changing this value, also change the corresponding value in
+// /src/chrome/browser/resources/settings/languages_page/edit_dictionary_page.js
 static const size_t MAX_CUSTOM_DICTIONARY_WORD_BYTES = 99;
 
 base::FilePath GetVersionedFileName(const std::string& input_language,
